--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,16 +8,18 @@
         android:minSdkVersion="10"
         android:targetSdkVersion="10" />
 
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         
         <uses-library android:name="com.android.future.usb.accessory" />
-        
+         
         <activity
             android:name="net.notso.blinkenlights.MainActivity"
-            android:label="@string/title_activity_main" >
+            android:label="@string/title_activity_main" android:launchMode="singleTop" android:icon="@drawable/ic_launcher">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
